max-width to style, URL

--- a/Poster-nach-Zint.html
+++ b/Poster-nach-Zint.html
@@ -2,6 +2,7 @@
 <!--
 
    https://github.com/ReneNyffenegger/Chronologie
+   https://renenyffenegger.ch/Biblisches/Chronologie/Poster-nach-Zint.html
 
 -->
 <html>
@@ -11,13 +12,13 @@
   <title>Biblische Chronologie: Poster nach Paul G. Zint</title>
 <style>
   img {
-     overflow: hidden;
+     max-width:100%;
   }
 </style>
 </head>
 <body>
 
-  <img src='Poster-nach-Zint.png' style='max-width:100%'> <!--  style='width:1716px;height:753px' -->
+  <img src='Poster-nach-Zint.png'>
 
   <p>
   Dieses Poster wurde gemäss der
