Fix a few issues, add more text to html

--- a/Poster-nach-Zint.html
+++ b/Poster-nach-Zint.html
@@ -14,16 +14,39 @@
   img {
      max-width:100%;
   }
+  ul {margin-top: 2px; margin-bottom: 2px;}
 </style>
 </head>
 <body>
 
-  <img src='Poster-nach-Zint.png'>
+  <h1>Biblische Chronologie - Poster nach Paul Gerhard Zint</h1>
 
-  <p>
-  Dieses Poster wurde gemäss der
+  Das folgende Poster versucht, einige der Zahlen der <a href='http://www.zeitundzahl.de/'>von Paul Gerhart Zint erarbeiteten Chronologie der Bibel</a> grafisch darzustellen.
+  <br>
+  Im Allgemeinen sind gleich lange Zeitabschnitte mit der gleichen Farbe koloriert.
+
+  </p>
+
+  Besonders erstaunlich fand ich folgende Zahlen:
+  <ul>
+     <li>1111 Jahre von der <a href='/notes/biblisches/Flut'>Flut</a> bis zu <a href='/notes/biblisches/Personen/Mose'>Moses</a> Tod.
+     <li>2222 Jahre von <a href='/notes/biblisches/Personen/Abraham'>Abrahams</a> <a href='/notes/biblisches/Chronologie/Abrahams-Geburtsjahr'>Geburt</a> bis zu Christi Geburt.</li>
+     <li>3333 Jahre von <a href='/notes/biblisches/Personen/Adam'>Adams</a> Tod bis zur Kreuzigung des Herrn.
+     <li>Je 2121 Jahre von Adam bis Isaaks «Opferung» und von Isaaks «Opferung» bis Jesus 12 Jahre alt war.
+     <li>Je 2647 Jahre von Adam bis Moses Geburt und von der Flut bis zum Ende der Chronologie (Zerstörung des 2. Tempels)
+  </ul>
+
+  </p>Weitere Zahlen finden sich auf <a href='http://zeitundzahl.de/'>zeitundzahl.de</a>
+  
+  </p>Dieses Poster wurde gemäss der
   biblischen Chronologie von <a href="http://renenyffenegger.ch/notes/biblisches/Chronologie/Paul-Gerhard-Zint">Paul-Gerhard-Zint</a> 
-  mit <a href="https://github.com/ReneNyffenegger/Chronologie">https://github.com/ReneNyffenegger/Chronologie/Poster-nach-Zint.ods</a> generiert.
+  mit <a href="https://github.com/ReneNyffenegger/Chronologie">Poster-nach-Zint.ods (github)</a> generiert.
+
+  <a href='Poster-nach-Zint.pdf'><img src='Poster-nach-Zint.png'></a>
+
+  <p>Ein PDF davon kann <a href='Poster-nach-Zint.pdf'>hier</a> heruntergeladen werden.
+
+  <p>Siehe auch <a href='/notes/biblisches/Chronologie'>Biblische Chronologie</a>
 
 </body>
 </html>
