--- a/Poster-nach-Zint.html
+++ b/Poster-nach-Zint.html
@@ -33,7 +33,9 @@
      <li>2222 Jahre von <a href='/notes/biblisches/Personen/Abraham'>Abrahams</a> <a href='/notes/biblisches/Chronologie/Abrahams-Geburtsjahr'>Geburt</a> bis zu Christi Geburt.</li>
      <li>3333 Jahre von <a href='/notes/biblisches/Personen/Adam'>Adams</a> Tod bis zur Kreuzigung des Herrn.
      <li>Je 2121 Jahre von Adam bis Isaaks «Opferung» und von Isaaks «Opferung» bis Jesus 12 Jahre alt war.
+     <li>Je 440 Jahre von Mose (Beginn des Jüdischen Volkes) bis zum Begin des Baus des 1. Tempels (Höhepunkt der Geschichte des Volkes im Alten Testament) und 440 Jahre vom Tempelbau bis zur Zerstörung des Tempels (Tiefpunkt der Geschichte dieses Volkes).
      <li>Je 2647 Jahre von Adam bis Moses Geburt und von der Flut bis zum Ende der Chronologie (Zerstörung des 2. Tempels)
+     <li>Das Gesetz dauerte <a href='/notes/biblisches/Grundtext/Zahlen#n1495'>1495</a> Jahre. 1495 ist auch der Zahlwert der Hebräischen Alphabets.
   </ul>
 
   </p>Weitere Zahlen finden sich auf <a href='http://zeitundzahl.de/'>zeitundzahl.de</a>
